--- a/nonograms/style.scss
+++ b/nonograms/style.scss
@@ -161,6 +161,30 @@ $third-1: #f2e9e4;
   font-family: 'Ashar';
   background: rgba(88, 76, 56, 0.585);
 }
+.header {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  width: 100vw;
+  height: 70px;
+  background: $light-3;
+  // background: linear-gradient(98deg, $light-3 81%, $light-2 99%);
+  &__btn {
+    width: 130px;
+    font-size: 22px;
+    padding: 15px;
+    margin-right: 50px;
+    text-align: center;
+    color: $light-5;
+    background: $light-2;
+    border-radius: 20px;
+    &:hover {
+      color: $light-1;
+      background: $another-2;
+      cursor: pointer;
+    }
+  }
+}
 .offensive {
   display: flex;
   align-items: center;
@@ -169,20 +193,10 @@ $third-1: #f2e9e4;
   height: 70px;
   margin: 0 auto;
   // background: $another-2;
-  &__btn {
-    // width: 150px;
-    // height: 50px;
-    padding: 18px;
-    color: $light-1;
-    background: $another-4;
-    border-radius: 20px;
-    &:hover {
-      color: $another-4;
-      background: $light-1;
-      cursor: pointer;
-    }
-  }
   &__timer {
+    font-family: 'Dell';
+    font-size: 25px;
+    color: $another-4;
   }
 }
 .game {
@@ -260,7 +274,8 @@ $third-1: #f2e9e4;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  // margin-top: 50px;
+  height: calc(100vh - 70px);
   font-size: 50px;
   user-select: none;
 
