--- a/nonograms/style.scss
+++ b/nonograms/style.scss
@@ -263,8 +263,17 @@ $third-1: #f2e9e4;
   &__line {
     background: rgb(141, 139, 139);
     border: 1px solid rgb(192, 190, 190);
-    box-sizing: border-box;
+    // box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    align-items: center;
+    gap: 3px;
+    padding-bottom: 5px;
   }
+}
+.line-text {
+  font-size: 15px;
 }
 .lower-hints {
   grid-area: third;
@@ -276,7 +285,12 @@ $third-1: #f2e9e4;
   &__line {
     background: rgb(141, 139, 139);
     border: 1px solid rgb(192, 190, 190);
-    box-sizing: border-box;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    padding-right: 5px;
+    gap: 8px;
+    // box-sizing: border-box;
   }
 }
 .menu {
