--- a/nonograms/style.scss
+++ b/nonograms/style.scss
@@ -174,6 +174,9 @@ $third-1: #f2e9e4;
     margin-left: 30px;
     font-family: 'Dell';
     font-size: 60px;
+    &:hover {
+      cursor: pointer;
+    }
   }
   &__container {
     display: flex;
@@ -258,7 +261,7 @@ $third-1: #f2e9e4;
   display: grid;
   font-family: 'Ashar';
   // grid-template-columns: repeat(5, 50px);
-  grid-template-rows: 70px;
+  // grid-template-rows: 70px;
 
   &__line {
     background: rgb(141, 139, 139);
@@ -279,8 +282,8 @@ $third-1: #f2e9e4;
   grid-area: third;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 70px;
-  grid-template-rows: repeat(5, 50px);
+  // grid-template-columns: 70px;
+  // grid-template-rows: repeat(5, 50px);
 
   &__line {
     background: rgb(141, 139, 139);
@@ -297,7 +300,6 @@ $third-1: #f2e9e4;
   display: flex;
   justify-content: center;
   align-items: center;
-  // margin-top: 50px;
   height: calc(100vh - 70px);
   font-size: 50px;
   user-select: none;
@@ -325,7 +327,42 @@ $third-1: #f2e9e4;
     &:hover {
       color: $light-2;
       text-decoration: $another-4 underline;
+      cursor: pointer;
       // text-decoration: $another-4 wavy underline;
+    }
+  }
+}
+.level {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // margin-top: 50px;
+  height: calc(100vh - 70px);
+  font-size: 50px;
+  user-select: none;
+
+  &__options {
+    text-align: center;
+    padding: 40px;
+    border-radius: 30px;
+    background: $light-3;
+  }
+  &__headline {
+    color: $light-1;
+    margin-top: 10px;
+    margin-bottom: 40px;
+  }
+  &__desc {
+    color: $light-2;
+    text-decoration: $another-4 underline;
+  }
+  &__field {
+    color: $another-2;
+    margin-bottom: 20px;
+
+    &:hover {
+      color: $light-2;
+      text-decoration: $another-4 underline;
       cursor: pointer;
     }
   }
@@ -336,7 +373,9 @@ $third-1: #f2e9e4;
       // color: $another-4;
     }
     &__level {
-      // color: $another-4;
+      // color: $light-2;
+      // text-decoration: $another-4 underline;
+      // cursor: pointer;
     }
   }
 }
