--- a/nonograms/style.scss
+++ b/nonograms/style.scss
@@ -199,25 +199,48 @@ $third-1: #f2e9e4;
     color: $light-5;
     background: $light-2;
     border-radius: 20px;
+    border: 1px solid $light-5;
     &:hover {
       color: $light-1;
       background: $another-2;
+      border: 1px solid $light-1;
       cursor: pointer;
     }
   }
 }
 .offensive {
   display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 70vw;
+  justify-content: space-between;
+  max-width: 820px;
   height: 70px;
   margin: 0 auto;
-  // background: $another-2;
+  margin-top: 10px;
+
   &__timer {
     font-family: 'Dell';
     font-size: 25px;
-    color: $another-4;
+    color: $light-3;
+    margin: 25px 0 0 80px;
+  }
+  &__btns {
+    display: flex;
+    gap: 10px;
+  }
+  &__btn {
+    font-size: 22px;
+    padding: 15px 15px 37px 15px;
+    text-align: center;
+    color: $light-5;
+    background: $light-2;
+    border-radius: 20px;
+    margin: 10px 0;
+    border: 1px solid $light-5;
+    &:hover {
+      color: $light-1;
+      background: $light-3;
+      border: 1px solid $light-1;
+      cursor: pointer;
+    }
   }
 }
 .game {
@@ -228,7 +251,7 @@ $third-1: #f2e9e4;
     'first second'
     'third four';
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 .field {
   grid-area: four;
@@ -431,10 +454,8 @@ $third-1: #f2e9e4;
   }
   &__btn {
     width: 200px;
-    // display: inline;
     font-size: 22px;
     padding: 15px;
-    // margin-right: 50px;
     text-align: center;
     color: $light-5;
     background: $light-2;
