--- a/nonograms/style.scss
+++ b/nonograms/style.scss
@@ -157,6 +157,7 @@ $third-4: #4a4e69;
 $third-3: #9a8c98;
 $third-2: #c9ada7;
 $third-1: #f2e9e4;
+
 %label {
   color: $light-2;
   margin-top: 10px;
@@ -255,14 +256,37 @@ $third-1: #f2e9e4;
 }
 .field {
   grid-area: four;
-  display: grid;
+  // display: grid;
+  display: flex;
+  flex-direction: column;
   // grid-template-columns: repeat(5, 50px);
   // grid-template-rows: repeat(5, 50px);
   margin: 0 auto;
+  &__row {
+    display: flex;
+    box-sizing: border-box;
+    border-bottom: 2px solid rgb(192, 190, 190);
+
+    &:nth-child(5n) {
+      border-bottom: 2px solid black;
+    }
+    &:nth-child(1) {
+      border-top: 2px solid black;
+    }
+  }
   &__cell {
     background: rgb(96, 93, 93);
-    border: 1px solid rgb(192, 190, 190);
+    border-right: 2px solid rgb(192, 190, 190);
     box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+
+    &:nth-child(5n) {
+      border-right: 2px solid black;
+    }
+    &:nth-child(1) {
+      border-left: 2px solid black;
+    }
   }
 }
 .fill {
