--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -256,26 +256,28 @@ table {
 .field__row {
   display: flex;
   box-sizing: border-box;
-  border-bottom: 2px solid rgb(192, 190, 190);
+  border-bottom: 1.5px solid #343331;
 }
 .field__row:nth-child(5n) {
-  border-bottom: 2px solid black;
+  border-bottom: 3px solid #0c1015;
 }
 .field__row:nth-child(1) {
-  border-top: 2px solid black;
+  border-top: 3px solid #0c1015;
 }
 .field__cell {
   background: rgb(96, 93, 93);
-  border-right: 2px solid rgb(192, 190, 190);
+  border-right: 1.5px solid #343331;
   box-sizing: border-box;
+  max-width: 50px;
+  max-height: 50px;
   width: 100%;
   height: 100%;
 }
 .field__cell:nth-child(5n) {
-  border-right: 2px solid black;
+  border-right: 3px solid #0c1015;
 }
 .field__cell:nth-child(1) {
-  border-left: 2px solid black;
+  border-left: 3px solid #0c1015;
 }
 
 .fill {
@@ -306,16 +308,24 @@ table {
   margin: 0 auto;
   display: grid;
   font-family: "Ashar";
+  box-sizing: border-box;
 }
 .upper-hints__line {
   background: rgb(141, 139, 139);
-  border: 1px solid rgb(192, 190, 190);
+  border-right: 1.5px solid #343331;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   justify-content: end;
   align-items: center;
   gap: 3px;
   padding-bottom: 5px;
+}
+.upper-hints__line:nth-child(5n) {
+  border-right: 3px solid #0c1015;
+}
+.upper-hints__line:nth-last-child(1) {
+  border-right: none;
 }
 
 .line-text {
@@ -329,16 +339,23 @@ table {
 }
 .lower-hints__line {
   background: rgb(141, 139, 139);
-  border: 1px solid rgb(192, 190, 190);
+  border-bottom: 1.5px solid #343331;
   display: flex;
   justify-content: end;
   align-items: center;
   padding-right: 5px;
   gap: 8px;
 }
+.lower-hints__line:nth-child(5n) {
+  border-bottom: 3px solid #0c1015;
+}
+.lower-hints__line:nth-last-child(1) {
+  border-bottom: none;
+}
 
 .menu {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: calc(100vh - 70px);
@@ -347,11 +364,17 @@ table {
      -moz-user-select: none;
           user-select: none;
 }
-.menu__start {
-  text-align: center;
+.menu__cover {
   padding: 40px;
   border-radius: 30px;
   background: #4e4a47;
+  text-align: center;
+}
+.menu__continue {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 .menu__text {
   margin-bottom: 60px;
