--- a/nonograms/style.scss
+++ b/nonograms/style.scss
@@ -190,12 +190,32 @@ $third-1: #f2e9e4;
   }
   &__container {
     display: flex;
+    align-items: center;
+    padding-right: 50px;
+    gap: 30px;
+  }
+  &__sound,
+  &__sound-off {
+    width: 45px;
+    height: 45px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    &:hover {
+      filter: drop-shadow(0px 0px 1px $light-1);
+      cursor: pointer;
+    }
+  }
+  &__sound {
+    background-image: url('./img/sound-on.svg');
+    &-off {
+      background-image: url('./img/sound-off.png');
+    }
   }
   &__btn {
     width: 130px;
     font-size: 22px;
     padding: 15px;
-    margin-right: 50px;
+    // margin-right: 50px;
     text-align: center;
     color: $light-5;
     background: $light-2;
