--- a/nonograms/style.scss
+++ b/nonograms/style.scss
@@ -142,34 +142,90 @@ table {
   font-weight: normal;
   font-style: normal;
 }
+[data-theme='light'] {
+  --light-0: #90858564;
+  --another-1: #d7ced6;
+  --btn-1: #0c1015;
+  --btn-2: #bcab97;
+  --btn-3: #0c1015;
+  --btn-4: #d7ced6;
+  --btn-5: #554b4182;
+  --header-1: #4e4a47;
+  --header-2: #6c69658e;
+  --offensive-1: #4e4a47;
+  --text: #0c1015;
+  --field-1: #4e4a47;
+  --field-2: #bcab97;
+  --field-3: #282b37;
+  --field-4: #818189;
+  --field-5: #bcab97;
+  --field-6: #d7ced6;
+  --overlay: rgba(188, 171, 151, 0.6);
+  --modal: #4e4a47;
+}
+
+[data-theme='dark'] {
+  --light-0: #000000ce;
+  --another-1: #818189;
+  --btn-1: #d7ced6;
+  // --btn-1: #343331;
+  --btn-2: #56568f7c;
+  // --btn-2: #bcab97;
+  --btn-3: #d7ced6;
+  --btn-4: #0c1015;
+  --btn-5: #d5979f7e;
+  --header-1: #bcab97;
+  --header-2: #4e4a47;
+  --offensive-1: #d7ced6;
+  --text: #d7ced6;
+  --field-1: #ffffff7f;
+  --field-2: #0c1015b0;
+  --field-3: #0c1015;
+  --field-4: #671b1b9f;
+  --field-5: #1b1b6798;
+  --field-6: #323332b6;
+  --overlay: rgba(18, 11, 4, 0.6);
+  --modal: #8b8b8bfb;
+}
 $light-5: #0c1015;
 $light-4: #343331;
-$light-3: #4e4a47;
-$light-2: #bcab97;
-$light-1: #d7ced6;
-$another-5: #1a1e2e;
-$another-4: #282b37;
-$another-3: #596869;
-$another-2: #818189;
-$another-1: #dee1ed;
-$third-5: #22223b;
-$third-4: #4a4e69;
-$third-3: #9a8c98;
-$third-2: #c9ada7;
-$third-1: #f2e9e4;
 
+%cell {
+  background: var(--another-1);
+  opacity: 0.7;
+}
 %label {
-  color: $light-2;
+  color: var(--field-2);
   margin-top: 10px;
-  text-decoration: $another-4 underline;
+  text-decoration: var(--field-3) underline;
 }
 %text {
-  color: $light-1;
+  color: var(--field-6);
   margin-top: 10px;
+}
+%btn {
+  min-width: 120px;
+  max-width: 150px;
+  padding: 15px;
+  font-size: 22px;
+  text-align: center;
+  color: var(--btn-1);
+  background: var(--btn-2);
+  border-radius: 20px;
+  border: 1px solid var(--btn-3);
+  box-sizing: border-box;
+  &:hover {
+    color: var(--btn-4);
+    background: var(--btn-5);
+    border: 1px solid var(--btn-3);
+    cursor: pointer;
+  }
 }
 .body {
   font-family: 'Ashar';
-  background: rgba(88, 76, 56, 0.585);
+  background: var(--light-0);
+  // background: #584c3895;
+  // opacity: 0.5;
 }
 .header {
   display: flex;
@@ -177,10 +233,9 @@ $third-1: #f2e9e4;
   align-items: center;
   width: 100vw;
   height: 70px;
-  background: $light-3;
-  // background: linear-gradient(98deg, $light-3 81%, $light-2 99%);
+  background: var(--header-2);
   &__logo {
-    color: $light-2;
+    color: var(--header-1);
     margin-left: 30px;
     font-family: 'Dell';
     font-size: 60px;
@@ -200,8 +255,9 @@ $third-1: #f2e9e4;
     height: 45px;
     background-size: 100%;
     background-repeat: no-repeat;
+    opacity: 50%;
     &:hover {
-      filter: drop-shadow(0px 0px 1px $light-1);
+      filter: drop-shadow(0px 0px 1px var(--btn-4));
       cursor: pointer;
     }
   }
@@ -211,57 +267,57 @@ $third-1: #f2e9e4;
       background-image: url('./img/sound-off.png');
     }
   }
-  &__btn {
-    width: 130px;
-    font-size: 22px;
-    padding: 15px;
-    // margin-right: 50px;
-    text-align: center;
-    color: $light-5;
-    background: $light-2;
-    border-radius: 20px;
-    border: 1px solid $light-5;
-    &:hover {
-      color: $light-1;
-      background: $another-2;
-      border: 1px solid $light-1;
-      cursor: pointer;
+  &__theme-light,
+  &__theme-dark {
+    width: 45px;
+    height: 45px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    opacity: 50%;
+  }
+  &__theme {
+    &-light {
+      background-image: url('./img/light.svg');
     }
+    &-dark {
+      background-image: url('./img/dark.png');
+    }
+  }
+  &__btn {
+    @extend %btn;
   }
 }
 .offensive {
   display: flex;
   justify-content: space-between;
-  max-width: 820px;
-  height: 70px;
+  max-width: 320px;
   margin: 0 auto;
-  margin-top: 10px;
+  margin-top: 50px;
+  margin-bottom: 30px;
+
+  &__label {
+    font-size: 25px;
+    color: var(--offensive-1);
+    font-weight: 800;
+
+    span {
+      color: var(--offensive-1);
+      text-decoration: var(--offensive-1) underline;
+    }
+  }
 
   &__timer {
     font-family: 'Dell';
     font-size: 25px;
-    color: $light-3;
-    margin: 25px 0 0 80px;
+    color: var(--offensive-1);
+    // margin: 25px 0 0 80px;
   }
   &__btns {
     display: flex;
     gap: 10px;
   }
   &__btn {
-    font-size: 22px;
-    padding: 15px 15px 37px 15px;
-    text-align: center;
-    color: $light-5;
-    background: $light-2;
-    border-radius: 20px;
-    margin: 10px 0;
-    border: 1px solid $light-5;
-    &:hover {
-      color: $light-1;
-      background: $light-3;
-      border: 1px solid $light-1;
-      cursor: pointer;
-    }
+    @extend %btn;
   }
 }
 .game {
@@ -276,11 +332,8 @@ $third-1: #f2e9e4;
 }
 .field {
   grid-area: four;
-  // display: grid;
   display: flex;
   flex-direction: column;
-  // grid-template-columns: repeat(5, 50px);
-  // grid-template-rows: repeat(5, 50px);
   margin: 0 auto;
   &__row {
     display: flex;
@@ -295,11 +348,11 @@ $third-1: #f2e9e4;
     }
   }
   &__cell {
-    background: rgb(96, 93, 93);
+    @extend %cell;
     border-right: 1.5px solid $light-4;
+    max-width: 35px;
+    max-height: 35px;
     box-sizing: border-box;
-    max-width: 50px;
-    max-height: 50px;
     width: 100%;
     height: 100%;
 
@@ -337,55 +390,65 @@ $third-1: #f2e9e4;
   grid-area: second;
   margin: 0 auto;
   display: grid;
-  font-family: 'Ashar';
-  box-sizing: border-box;
-  // grid-template-columns: repeat(5, 50px);
-  // grid-template-rows: 70px;
+  border-top: 1.5px solid $light-4;
 
   &__line {
-    background: rgb(141, 139, 139);
+    @extend %cell;
     border-right: 1.5px solid $light-4;
-    box-sizing: border-box;
-    // box-sizing: border-box;
     display: flex;
     flex-direction: column;
     justify-content: end;
     align-items: center;
     gap: 3px;
     padding-bottom: 5px;
+    padding-top: 15px;
 
     &:nth-child(5n) {
       border-right: 3px solid $light-5;
     }
-    &:nth-last-child(1) {
-      border-right: none;
+    &:nth-child(1) {
+      border-left: 3px solid $light-5;
     }
   }
 }
 .line-text {
+  color: var(--text);
   font-size: 15px;
 }
 .lower-hints {
   grid-area: third;
   margin: 0 auto;
   display: grid;
-  // grid-template-columns: 70px;
-  // grid-template-rows: repeat(5, 50px);
+  border-left: 1.5px solid $light-4;
 
   &__line {
-    background: rgb(141, 139, 139);
+    @extend %cell;
     border-bottom: 1.5px solid $light-4;
     display: flex;
     justify-content: end;
     align-items: center;
     padding-right: 5px;
     gap: 8px;
+    padding-left: 15px;
+
     &:nth-child(5n) {
       border-bottom: 3px solid $light-5;
     }
-    &:nth-last-child(1) {
-      border-bottom: none;
+    &:nth-child(1) {
+      border-top: 3px solid $light-5;
     }
+    &:nth-last-child(1) {
+      border-bottom: 3px solid $light-5;
+    }
+  }
+}
+.btns {
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+  margin-top: 50px;
+  &__btn {
+    @extend %btn;
   }
 }
 .menu {
@@ -400,7 +463,7 @@ $third-1: #f2e9e4;
   &__cover {
     padding: 40px;
     border-radius: 30px;
-    background: $light-3;
+    background: var(--field-1);
     text-align: center;
   }
   &__continue {
@@ -409,31 +472,20 @@ $third-1: #f2e9e4;
     gap: 20px;
     margin-bottom: 20px;
   }
-  &__start {
-    // text-align: center;
-    // padding: 40px;
-    // border-radius: 30px;
-    // background: $light-3;
-  }
   &__label {
     @extend %label;
-    // color: $light-2;
-    // margin-top: 10px;
-    // text-decoration: $another-4 underline;
   }
   &__text {
     @extend %text;
-    // color: $light-1;
-    // margin-top: 10px;
     margin-bottom: 60px;
   }
   &__level {
-    color: $another-2;
+    color: var(--field-4);
     margin-bottom: 20px;
 
     &:hover {
-      color: $light-2;
-      text-decoration: $another-4 underline;
+      color: var(--field-5);
+      text-decoration: var(--field-5) underline;
       cursor: pointer;
       // text-decoration: $another-4 wavy underline;
     }
@@ -449,27 +501,34 @@ $third-1: #f2e9e4;
   user-select: none;
 
   &__options {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    align-items: center;
     padding: 40px;
     border-radius: 30px;
-    background: $light-3;
+    background: var(--field-1);
   }
   &__headline {
-    color: $light-1;
+    color: var(--field-6);
     margin-top: 10px;
     margin-bottom: 40px;
   }
   &__desc {
-    color: $light-2;
-    text-decoration: $another-4 underline;
+    color: var(--field-2);
+    text-decoration: var(--field-3) underline;
+  }
+  &__btn {
+    @extend %btn;
+    margin-top: 20px;
   }
   &__field {
-    color: $another-2;
+    color: var(--field-4);
     margin-bottom: 20px;
 
     &:hover {
-      color: $light-2;
-      text-decoration: $another-4 underline;
+      color: var(--field-5);
+      text-decoration: var(--field-5) underline;
       cursor: pointer;
     }
   }
@@ -478,7 +537,7 @@ $third-1: #f2e9e4;
   position: fixed;
   width: 100vw;
   height: 100%;
-  background: rgb(188, 171, 151, 0.6);
+  background: var(--overlay);
   top: 0;
   display: flex;
   justify-content: center;
@@ -498,7 +557,7 @@ $third-1: #f2e9e4;
   margin: 20px;
   padding: 16px 14px 16px 16px;
   border-radius: 40px;
-  background: $light-3;
+  background: var(--modal);
   z-index: 1;
   transform: scale(0);
   transition: all 0.5s;
@@ -507,6 +566,9 @@ $third-1: #f2e9e4;
   //   inset 0 -8px 8px rgba(0, 0, 0, 0.25),
   //   0 0 50px 2px rgba(223, 240, 242, 0.482),
   //   10px 20px 25px rgba(0, 0, 0, 0.4);
+  &-active {
+    transform: scale(1);
+  }
 
   &__container {
     display: flex;
@@ -525,20 +587,14 @@ $third-1: #f2e9e4;
     @extend %text;
     margin-bottom: 20px;
   }
+  &__btns {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+  }
   &__btn {
-    width: 200px;
-    font-size: 22px;
-    padding: 15px;
-    text-align: center;
-    color: $light-5;
-    background: $light-2;
-    border-radius: 20px;
-    margin: 10px 0;
-    &:hover {
-      color: $light-1;
-      background: $another-2;
-      cursor: pointer;
-    }
+    @extend %btn;
+    max-width: 250px;
   }
   &__cover {
     display: flex;
@@ -559,18 +615,23 @@ $third-1: #f2e9e4;
     }
   }
 }
-.modal-active {
-  transform: scale(1);
+// .modal-active {
+//   transform: scale(1);
+// }
+.disable {
+  opacity: 0.4;
+  &:hover {
+    cursor: default;
+    color: var(--btn-1);
+    background: var(--btn-2);
+    border: 1px solid var(--btn-3);
+  }
 }
 @media (hover: hover) {
   .menu {
     &__text {
-      // color: $another-4;
     }
     &__level {
-      // color: $light-2;
-      // text-decoration: $another-4 underline;
-      // cursor: pointer;
     }
   }
 }
