--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -205,7 +205,7 @@ table {
           text-decoration: var(--field-3) underline;
 }
 
-.modal__text-achieve, .modal__text, .menu__text {
+.modal__text-achieve, .modal__text, .menu__or, .menu__text {
   color: var(--field-6);
 }
 
@@ -237,7 +237,6 @@ table {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
   height: 70px;
   background: var(--header-2);
 }
@@ -313,9 +312,12 @@ table {
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .offensive__bottom {
-  max-width: 260px;
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 20px;
 }
 
 .game {
@@ -419,7 +421,7 @@ table {
   display: flex;
   justify-content: end;
   align-items: center;
-  padding-right: 5px;
+  padding-right: 8px;
   gap: 8px;
   padding-left: 15px;
 }
@@ -459,8 +461,7 @@ table {
 .menu__continue {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  margin-bottom: 20px;
+  gap: 10px;
 }
 .menu__label {
   margin-top: 10px;
@@ -583,7 +584,11 @@ table {
 }
 .modal__cover {
   display: flex;
+  justify-content: space-between;
   gap: 20px;
+}
+.modal__cover-right {
+  width: 200px;
 }
 .modal__cover:nth-child(2) {
   margin-top: 20px;
@@ -620,11 +625,8 @@ table {
   .header__container {
     padding-right: 0;
   }
-  .offensive__bottom {
-    max-width: 300px;
-  }
-  .offensive__btns {
-    flex-wrap: wrap;
-    justify-content: center;
+  .menu__cover {
+    padding: 15px;
+    margin: 0 10px;
   }
 }/*# sourceMappingURL=style.css.map */
