--- a/nonograms/style.scss
+++ b/nonograms/style.scss
@@ -231,7 +231,7 @@ $light-4: #343331;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100vw;
+  // width: 100vw;
   height: 70px;
   background: var(--header-2);
   &__logo {
@@ -310,18 +310,20 @@ $light-4: #343331;
     font-family: 'Dell';
     font-size: 25px;
     color: var(--offensive-1);
-    // margin: 25px 0 0 80px;
   }
   &__btns {
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
+    justify-content: center;
   }
   &__btn {
     @extend %btn;
   }
   &__bottom {
-    max-width: 260px;
+    max-width: 400px;
+    margin: 0 auto;
+    margin-top: 20px;
   }
 }
 .game {
@@ -431,7 +433,7 @@ $light-4: #343331;
     display: flex;
     justify-content: end;
     align-items: center;
-    padding-right: 5px;
+    padding-right: 8px;
     gap: 8px;
     padding-left: 15px;
 
@@ -473,8 +475,8 @@ $light-4: #343331;
   &__continue {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    margin-bottom: 20px;
+    gap: 10px;
+    // margin-bottom: 20px;
   }
   &__label {
     @extend %label;
@@ -483,6 +485,9 @@ $light-4: #343331;
   &__text {
     @extend %text;
     margin-bottom: 60px;
+  }
+  &__or {
+    @extend %text;
   }
   &__level {
     color: var(--field-4);
@@ -602,15 +607,18 @@ $light-4: #343331;
   }
   &__cover {
     display: flex;
+    justify-content: space-between;
     gap: 20px;
 
+    &-right {
+      width: 200px;
+    }
     &:nth-child(2) {
       margin-top: 20px;
     }
     &:nth-last-child(2) {
       margin-bottom: 20px;
     }
-
     span {
       @extend %label;
     }
@@ -653,15 +661,10 @@ $light-4: #343331;
       padding-right: 0;
     }
   }
-  .offensive {
-    &__bottom {
-      max-width: 300px;
-    }
-    &__btns {
-      flex-wrap: wrap;
-      justify-content: center;
+  .menu {
+    &__cover {
+      padding: 15px;
+      margin: 0 10px;
     }
   }
 }
-// @media screen and (width < 620px) {
-// }
