--- a/nonograms/style.scss
+++ b/nonograms/style.scss
@@ -162,15 +162,15 @@ table {
   --field-6: #d7ced6;
   --overlay: rgba(188, 171, 151, 0.6);
   --modal: #4e4a47;
+  --cell: rgb(56, 56, 56);
+  --cross: url(./img/cross-light.svg);
 }
 
 [data-theme='dark'] {
   --light-0: #000000ce;
   --another-1: #818189;
   --btn-1: #d7ced6;
-  // --btn-1: #343331;
   --btn-2: #56568f7c;
-  // --btn-2: #bcab97;
   --btn-3: #d7ced6;
   --btn-4: #0c1015;
   --btn-5: #d5979f7e;
@@ -178,14 +178,16 @@ table {
   --header-2: #4e4a47;
   --offensive-1: #d7ced6;
   --text: #d7ced6;
-  --field-1: #ffffff7f;
+  --field-1: #857462;
   --field-2: #0c1015b0;
   --field-3: #0c1015;
-  --field-4: #671b1b9f;
-  --field-5: #1b1b6798;
+  --field-4: #1b1b6798;
+  --field-5: #671b1b9f;
   --field-6: #323332b6;
   --overlay: rgba(18, 11, 4, 0.6);
-  --modal: #8b8b8bfb;
+  --modal: #857462;
+  --cell: rgb(35, 35, 35);
+  --cross: url(./img/cross-dark.svg);
 }
 $light-5: #0c1015;
 $light-4: #343331;
@@ -315,15 +317,16 @@ $light-4: #343331;
     display: flex;
     gap: 10px;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-between;
   }
   &__btn {
     @extend %btn;
   }
   &__bottom {
-    max-width: 400px;
+    max-width: 440px;
     margin: 0 auto;
     margin-top: 20px;
+    padding-bottom: 40px;
   }
 }
 .game {
@@ -371,7 +374,7 @@ $light-4: #343331;
   }
 }
 .fill {
-  background: rgb(56, 56, 56);
+  background: var(--cell);
 }
 .cross {
   display: block;
@@ -388,7 +391,9 @@ $light-4: #343331;
     top: 0;
     right: 0;
     bottom: 0;
-    background: rgba(9, 9, 9, 0) url(./img/cross.svg) no-repeat;
+    background: rgba(9, 9, 9, 0) var(--cross) no-repeat;
+    // background-image: var(--cross);
+    // background: rgba(9, 9, 9, 0) url(./img/cross.svg) no-repeat;
     background-size: 100% 100%;
   }
 }
@@ -463,7 +468,7 @@ $light-4: #343331;
   justify-content: center;
   align-items: center;
   height: calc(100vh - 70px);
-  font-size: 50px;
+  font-size: 40px;
   user-select: none;
 
   &__cover {
@@ -481,10 +486,11 @@ $light-4: #343331;
   &__label {
     @extend %label;
     margin-top: 10px;
+    margin-bottom: 10px;
   }
   &__text {
     @extend %text;
-    margin-bottom: 60px;
+    margin-bottom: 40px;
   }
   &__or {
     @extend %text;
@@ -497,7 +503,6 @@ $light-4: #343331;
       color: var(--field-5);
       text-decoration: var(--field-5) underline;
       cursor: pointer;
-      // text-decoration: $another-4 wavy underline;
     }
   }
 }
@@ -505,9 +510,8 @@ $light-4: #343331;
   display: flex;
   justify-content: center;
   align-items: center;
-  // margin-top: 50px;
   height: calc(100vh - 70px);
-  font-size: 50px;
+  font-size: 40px;
   user-select: none;
 
   &__options {
@@ -560,7 +564,7 @@ $light-4: #343331;
   font-size: 30px;
   font-weight: bold;
   gap: 40px;
-  width: 500px;
+  width: 400px;
   margin: 20px;
   padding: 16px 14px 16px 16px;
   border-radius: 40px;
@@ -590,7 +594,7 @@ $light-4: #343331;
   }
   &__text {
     @extend %text;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     &-achieve {
       @extend %text;
       margin-bottom: 10px;
@@ -609,6 +613,8 @@ $light-4: #343331;
     display: flex;
     justify-content: space-between;
     gap: 20px;
+    border-bottom: 1.5px dashed var(--field-6);
+    margin-top: 7px;
 
     &-right {
       width: 200px;
@@ -631,9 +637,6 @@ $light-4: #343331;
     }
   }
 }
-// .modal-active {
-//   transform: scale(1);
-// }
 .disable {
   opacity: 0.4;
   &:hover {
@@ -653,18 +656,64 @@ $light-4: #343331;
 }
 @media screen and (width < 1040px) {
   .header {
-    justify-content: center;
     &__logo {
-      display: none;
-    }
-    &__container {
-      padding-right: 0;
+      font-size: 40px;
     }
   }
   .menu {
+    font-size: 35px;
     &__cover {
       padding: 15px;
       margin: 0 10px;
+    }
+  }
+  .modal {
+    width: 420px;
+    padding: 10px;
+    font-size: 25px;
+    margin: 0 10px;
+
+    &__text {
+      max-width: 380px;
+    }
+  }
+}
+@media screen and (width < 870px) {
+  %btn {
+    min-width: 90px;
+    font-size: 16px;
+    padding: 12px;
+  }
+  .header {
+    &__logo {
+      background-image: url('./img/logo.png');
+      width: 60px;
+      height: 60px;
+
+      background-size: 100%;
+      background-repeat: no-repeat;
+
+      span {
+        display: none;
+      }
+    }
+    &__container {
+      gap: 15px;
+      padding-right: 15px;
+    }
+    &__sound,
+    &__theme-light,
+    &__theme-dark {
+      width: 35px;
+      height: 35px;
+    }
+  }
+  .offensive {
+    &__bottom {
+      max-width: 320px;
+    }
+    &__btns {
+      justify-content: space-between;
     }
   }
 }
